[tool.poetry]
name = "scprint"
version = "1.0.12"
license = "MIT"
description = "scPRINT is a Large Cell Model for Gene Network Inference, Denoising and more from scRNAseq data"
authors = ["jeremie kalfon"]
readme = ["README.md", "LICENSE"]
repository = "https://github.com/jkobject/scPRINT"
keywords = ["scRNAseq","transformer","GRN","gene regulatory network","scPRINT","large cell model","foundation model"]

[tool.poetry.dependencies]
lamindb = "<=0.69.9"
bionty = "<=0.42.6"
python = "^3.10"
cellxgene-census = "*"
anndata = "*"
matplotlib = "*"
seaborn = "*"
gseapy = "*"
ipykernel = "*"
owlready2 = "*"
torchdata = "*"
biomart = "*"
scib = "*"
scikit-learn = "*"
scipy = "*"
pandas = ">=2.0.0"
numpy = "*"
leidenalg = "*"
decoupler = "*"
Bio = "*"
attridict = "*"
gget = "*"
fair-esm = "*"
hydra-core = "*"
lightning = "*"
pynndescent = ">=0.5.11"
scDataLoader = "*"
GRnnData = "*"
BenGRN = "*"
einops = "*"
rich = "*"
typeshed-client = "*"
tensorboardX = "*"
jsonargparse = "*"
docstring-parser = "*"
wandb = "*"
wandb-core = "*"
pykeops = "*"
louvain = "*"
hdbscan = "*"
scib-metrics = "*"
scikit-misc = "*"
zarr = "*"
tensorly = "*"
torch = "2.0.0"
torchvision = ">=0.15.0"
torchaudio = ">=2.0.0"
torchtext = ">=0.15.1"
pytorch-fast-transformers = { version = "*", optional = true }
# triton = { git = "https://github.com/triton-lang/triton", tag = "legacy-backend", subdirectory = "python", optional = true }
pytest = { version = "^7.4.3", optional = true }
coverage = { version = "^7.3.2", optional = true }
flake8 = { version = "^6.1.0", optional = true }
black = { version = "^23.10.1", optional = true }
isort = { version = "^5.12.0", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }
mypy = { version = "^1.6.1", optional = true }
gitchangelog = { version = "^3.0.4", optional = true }
mkdocs = { version = "^1.5.3", optional = true }

[tool.poetry.extras]
dev = [
    "pytest",
    "coverage",
    "flake8",
    "black",
    "isort",
    "pytest-cov",
    "mypy",
    "gitchangelog",
    "mkdocs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocstrings",
    "mkdocs-git-authors-plugin",
    "mkdocs-jupyter",
    "mkdocstrings-python"
]

flash = [
    "torchtext",
#    "triton",
    "torch",
    "torchvision",
    "torchaudio",
    "pytorch-fast-transformers"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scprint = 'scprint.__main__:main'
