[tool.poetry]
name = "scprint"
version = "1.1.2"
license = "MIT"
description = "scPRINT is a Large Cell Model for Gene Network Inference, Denoising and more from scRNAseq data"
authors = ["jeremie kalfon"]
readme = ["README.md", "LICENSE"]
repository = "https://github.com/jkobject/scPRINT"
keywords = ["scRNAseq","transformer","GRN","gene regulatory network","scPRINT","large cell model","foundation model"]

[tool.poetry.dependencies]
python = "3.10.*"
lamindb = "0.76.3"
bionty = "0.49.0"
cellxgene-census = "*"
torch = "2.2.0"
lightning = "*"
anndata = "*"
matplotlib = "*"
seaborn = "*"
ipykernel = "*"
torchdata = "*"
biomart = "*"
pandas = ">=2.0.0"
leidenalg = "*"
decoupler = "*"
django = "*"
scikit-misc = "*"
scDataLoader = "*"
GRnnData = "*"
BenGRN = "*"
gseapy = "*"
owlready2 = "*"
huggingface_hub = "*"
scib = "*"
scib-metrics = "*"
scikit-learn = "*"
scipy = "*"
numpy = "*"
Bio = "*"
attridict = "*"
gget = "*"
fair-esm = "*"
hydra-core = "*"
pynndescent = ">=0.5.11"
einops = "*"
rich = "*"
typeshed-client = "*"
jsonargparse = "*"
docstring-parser = "*"
wandb = "*"
wandb-core = "*"
louvain = "*"
hdbscan = "*"
zarr = "*"
tensorly = "*"
torchvision = "*"
torchaudio = "*"
torchtext = "*"
triton = {version = "2.2.0", optional = true}
pytorch-fast-transformers = { version = "*", optional = true }
pytest = { version = "^7.4.3", optional = true }
coverage = { version = "^7.3.2", optional = true }
flake8 = { version = "^6.1.0", optional = true }
black = { version = "^23.10.1", optional = true }
isort = { version = "^5.12.0", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }
mypy = { version = "^1.6.1", optional = true }
gitchangelog = { version = "^3.0.4", optional = true }
mkdocs = { version = "^1.5.3", optional = true }

[tool.poetry.extras]
dev = [
    "pytest",
    "coverage",
    "flake8",
    "black",
    "isort",
    "pytest-cov",
    "mypy",
    "gitchangelog",
    "mkdocs",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocstrings",
    "mkdocs-git-authors-plugin",
    "mkdocs-jupyter",
    "mkdocstrings-python"
]

flash = [
    "triton",
    "pytorch-fast-transformers"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scprint = 'scprint.__main__:main'
